<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FEFEFE"
    android:orientation="vertical"
    tools:context=".SigninActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:weightSum="100">

        <ImageButton
            android:id="@+id/sign_return"
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/back_icon"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="99"
            android:text="Sign in"
            android:textAlignment="center"
            android:textColor="#757575"
            android:textSize="17sp"
            tools:ignore="HardcodedText" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli_bold"
            android:text="Welcome back!"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli"
            android:text="@string/signin_way"
            android:textAlignment="center"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email_text"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:background="@drawable/edittext_shape"
            android:drawableEnd="@drawable/mail"
            android:hint="@string/enter_mail"
            android:inputType="textEmailAddress"
            android:maxLength="22"
            android:paddingStart="40dp"
            android:paddingEnd="25dp"
            android:textColorHint="#979797"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/password_text"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:background="@drawable/edittext_shape"
            android:drawableEnd="@drawable/lock"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:maxLength="22"
            android:paddingStart="40dp"
            android:paddingEnd="25dp"
            android:textColorHint="#979797"
            tools:ignore="Autofill" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <CheckBox
            android:id="@+id/remember_me"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="Remember me"
            android:textColor="#979797"
            android:textSize="15sp"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/forget_psd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:text="@string/forget_password"
            android:textAlignment="textEnd"
            android:textAllCaps="false"
            android:textColor="#979797"
            android:textSize="15sp" />

    </LinearLayout>


    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/signin_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:background="@drawable/btn"
        android:fontFamily="@font/muli"
        android:text="Continue"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        tools:ignore="HardcodedText" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:layout_margin="15dp"
            android:background="@drawable/round"
            android:src="@drawable/google_icon"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:layout_margin="15dp"
            android:background="@drawable/round"
            android:src="@drawable/facebook_2"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:layout_margin="15dp"
            android:background="@drawable/round"
            android:src="@drawable/twitter"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli_bold"
            android:text="Don't have an account?"
            android:textColor="#979797"
            android:textSize="15sp"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/to_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:fontFamily="@font/muli_bold"
            android:text="Sign up"
            android:textAllCaps="false"
            android:textColor="#FF7643"
            android:textSize="15sp"
            tools:ignore="HardcodedText" />

    </LinearLayout>

</LinearLayout>